# ChangeLog for dev-ruby/mkrf
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mkrf/ChangeLog,v 1.15 2010/08/01 10:00:34 hwoarang Exp $

  01 Aug 2010; Markos Chandras <hwoarang@gentoo.org> mkrf-0.2.3-r1.ebuild:
  Stable on amd64 wrt bug #329807

  26 Jul 2010; Christian Faulhammer <fauli@gentoo.org> mkrf-0.2.3-r1.ebuild:
  x86 stable, bug 329807

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  mkrf-0.2.3-r1.ebuild:
  Various cleanups.

  21 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  mkrf-0.2.3-r1.ebuild:
  Add Ruby 1.9 support – despite tests failing in both versions – to
  unbreak (masked) ruby-opengl deptree for 1.9.

*mkrf-0.2.3-r1 (01 Jan 2010)

  01 Jan 2010; Hans de Graaff <graaff@gentoo.org> +mkrf-0.2.3-r1.ebuild:
  Convert to ruby-fakegem since the gems version gets confused if
  dev-ruby/rdoc-2.4.x is installed.

  17 Jan 2009; nixnut <nixnut@gentoo.org> mkrf-0.2.3.ebuild:
  ppc stable #250933

  11 Jan 2009; Raúl Porcel <armin76@gentoo.org> mkrf-0.2.3.ebuild:
  ia64 stable wrt #250933

  10 Jan 2009; Tobias Klausmann <klausman@gentoo.org> mkrf-0.2.3.ebuild:
  Stable on alpha, bug #250933

  05 Jan 2009; nixnut <nixnut@gentoo.org> mkrf-0.2.3.ebuild:
  ~ppc'd wrt bug 250933

  21 Dec 2008; Markus Meier <maekke@gentoo.org> mkrf-0.2.3.ebuild:
  x86 stable, bug #250933

  19 Dec 2008; Thomas Anderson <gentoofan23@gentoo.org> mkrf-0.2.3.ebuild:
  stable amd64, bug 250933

  14 Dec 2008; Ferris McCormick <fmccor@gentoo.org> mkrf-0.2.3.ebuild:
  Sparc stable, part of Bug #250933.

  09 Apr 2008; Raúl Porcel <armin76@gentoo.org> mkrf-0.2.3.ebuild:
  Add ~ia64/~sparc wrt #216480

  08 Apr 2008; Tobias Klausmann <klausman@gentoo.org> mkrf-0.2.3.ebuild:
  Keyworded on alpha, bug #216480

*mkrf-0.2.3 (06 Apr 2008)

  06 Apr 2008; Hans de Graaff <graaff@gentoo.org> +metadata.xml,
  +mkrf-0.2.3.ebuild:
  Initial import; needed as dependency for new ruby-opengl versions
