@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mkrf/mkrf-0.2.3-r1.ebuild,v 1.5 2010/08/01 10:00:34 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mkrf/mkrf-0.2.3-r1.ebuild,v 1.6 2010/08/28 18:57:31 armin76 Exp $
 
 EAPI="2"
 USE_RUBY="ruby18 ruby19"
@@ -20,7 +20,7 @@ HOMEPAGE="http://mkrf.rubyforge.org/"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~ia64 ~ppc ~sparc x86"
+KEYWORDS="alpha amd64 ia64 ~ppc sparc x86"
 
 IUSE=""
 
