@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rcairo
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rcairo/ChangeLog,v 1.40 2010/08/22 12:23:06 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rcairo/ChangeLog,v 1.41 2010/08/28 18:56:22 armin76 Exp $
+
+  28 Aug 2010; Raúl Porcel <armin76@gentoo.org> rcairo-1.8.1.ebuild:
+  alpha/ia64/sparc stable wrt #329807
 
   22 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org>
   -files/rcairo-1.2.0-no-svg.patch:
