@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-opengl
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-opengl/ChangeLog,v 1.42 2010/08/21 21:52:42 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-opengl/ChangeLog,v 1.43 2010/08/28 18:58:27 armin76 Exp $
+
+  28 Aug 2010; Raúl Porcel <armin76@gentoo.org>
+  ruby-opengl-0.60.1-r1.ebuild:
+  alpha/ia64/sparc stable wrt #329807
 
   21 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org>
   -files/ruby-opengl-0.32c-extconf-gentoo.diff,
