@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/mkrf
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mkrf/ChangeLog,v 1.15 2010/08/01 10:00:34 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mkrf/ChangeLog,v 1.16 2010/08/28 18:57:31 armin76 Exp $
+
+  28 Aug 2010; Raúl Porcel <armin76@gentoo.org> mkrf-0.2.3-r1.ebuild:
+  alpha/ia64/sparc stable wrt #329807
 
   01 Aug 2010; Markos Chandras <hwoarang@gentoo.org> mkrf-0.2.3-r1.ebuild:
   Stable on amd64 wrt bug #329807
